ARM: dts: ccimx6sbc: Add wireless/bluetooth/emmc support dts variants.
This is equivalent to 8d4a3e6ef560 on v3.10/dey-1.6/maint.
ARM: dts: ccimx6. Add wireless/bluetooth/emmc support dts variants.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/arch/arm/boot/dts/imx6q-ccimx6sbc-wb-ldo-bypass.dts
+++ b/arch/arm/boot/dts/imx6q-ccimx6sbc-wb-ldo-bypass.dts
@@ -11,7 +11,11 @@
  * http://www.gnu.org/copyleft/gpl.html
  */
 
-#include "imx6q-ccimx6sbc.dts"
+/dts-v1/;
+/* ConnectCore 6 (Quad wireless/bluetooth variant) */
+#include "imx6q-ccimx6-wb.dtsi"
+/* ConnectCore 6 SBC carrier board */
+#include "imx6q-ccimx6sbc.dtsi"
 
 &cpu0 {
 	operating-points = <
