--- a/arch/arm/boot/dts/imx6dl-ccimx6sbc-mwb.dts
+++ b/arch/arm/boot/dts/imx6dl-ccimx6sbc-mwb.dts
@@ -10,8 +10,7 @@
  */
 
 /dts-v1/;
-
-/* ConnectCore 6 (Duallite variant) */
-#include "imx6dl-ccimx6.dtsi"
+/* ConnectCore 6 (Duallite wireless/bluetooth/emmc variant) */
+#include "imx6dl-ccimx6-mwb.dtsi"
 /* ConnectCore 6 SBC carrier board */
 #include "imx6dl-ccimx6sbc.dtsi"
