--- a/arch/arm/boot/dts/imx6q-ccimx6sbc-wb.dts
+++ b/arch/arm/boot/dts/imx6q-ccimx6sbc-wb.dts
@@ -10,8 +10,7 @@
  */
 
 /dts-v1/;
-
-/* ConnectCore 6 (Duallite variant) */
-#include "imx6dl-ccimx6.dtsi"
+/* ConnectCore 6 (Quad wireless/bluetooth variant) */
+#include "imx6q-ccimx6-wb.dtsi"
 /* ConnectCore 6 SBC carrier board */
-#include "imx6dl-ccimx6sbc.dtsi"
+#include "imx6q-ccimx6sbc.dtsi"
