--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -123,9 +123,14 @@ dtb-$(CONFIG_ARCH_MXC) += \
 	imx6dl-sabresd-pf200.dtb \
 	imx6dl-wandboard.dtb \
 	imx6dl-ccimx6sbc.dtb \
+	imx6dl-ccimx6sbc-w.dtb \
+	imx6dl-ccimx6sbc-mw.dtb \
+	imx6dl-ccimx6sbc-mwb.dtb \
 	imx6q-arm2.dtb \
 	imx6q-ccimx6sbc.dtb \
-	imx6q-ccimx6sbc-ldo-bypass.dtb \
+	imx6q-ccimx6sbc-w.dtb \
+	imx6q-ccimx6sbc-wb.dtb \
+	imx6q-ccimx6sbc-wb-ldo-bypass.dtb \
 	imx6q-sabreauto.dtb \
 	imx6q-sabreauto-ecspi.dtb \
 	imx6q-sabreauto-flexcan1.dtb \
