--- a/arch/arm/boot/dts/imx6dl-ccimx6sbc-w.dts
+++ b/arch/arm/boot/dts/imx6dl-ccimx6sbc-w.dts
@@ -14,3 +14,7 @@
 #include "imx6dl-ccimx6-w.dtsi"
 /* ConnectCore 6 SBC carrier board */
 #include "imx6dl-ccimx6sbc.dtsi"
+
+&gpu {
+	contiguous-size = <12>;
+};
