--- a/arch/arm/boot/dts/imx6dl-ccimx6sbc.dts
+++ b/arch/arm/boot/dts/imx6dl-ccimx6sbc.dts
@@ -15,3 +15,7 @@
 #include "imx6dl-ccimx6.dtsi"
 /* ConnectCore 6 SBC carrier board */
 #include "imx6dl-ccimx6sbc.dtsi"
+
+&gpu {
+	contiguous-size = <12>;
+};
