ARM: dts: imx6dl-ccimx6sbc: Use IPU0 for both MIPI and CSI cameras.
The i.MX6dl only has one IPU while the i.MX6q has two. This commit changes
both cameras to use IPU0 on the i.MX6dl based Digi platforms.

https://jira.digi.com/browse/DEL-2139

Signed-off-by: Urko Nalda Urko.Nalda@digi.com
(cherry picked from commit b07a1d39728d7530dfefa397be27d8fd4683d0c9)

--- a/arch/arm/boot/dts/imx6dl-ccimx6sbc.dtsi
+++ b/arch/arm/boot/dts/imx6dl-ccimx6sbc.dtsi
@@ -23,6 +23,16 @@
 		mxcfb0 = &mxcfb1;
 		mxcfb1 = &mxcfb2;
 	};
+
+	v4l2_cap_0 {
+		ipu_id = <0>;
+		csi_id = <0>;
+	};
+
+	v4l2_cap_1 {
+		ipu_id = <0>;
+		csi_id = <1>;
+	};
 };
 
 &hdmi_core {
@@ -37,4 +47,16 @@
 		status = "okay";
 		primary;
 	};
+};
+
+&i2c3 {
+	ov5640_mipi: ov5640_mipi@4c {
+		ipu_id = <0>;
+		csi_id = <1>;
+	};
+};
+
+&mipi_csi {
+	ipu_id = <0>;
+	csi_id = <1>;
 };
