--- a/arch/arm/boot/dts/imx6q-ccimx6sbc.dtsi
+++ b/arch/arm/boot/dts/imx6q-ccimx6sbc.dtsi
@@ -43,6 +43,16 @@
 		late_init = <0>;
 		status = "okay";
 	};
+
+	v4l2_cap_0 {
+		ipu_id = <1>;
+		csi_id = <1>;
+	};
+
+	v4l2_cap_1 {
+		ipu_id = <0>;
+		csi_id = <0>;
+	};
 };
 
 &hdmi_core {
@@ -62,6 +72,18 @@
 		crtc = "ipu1-di1";
 		status = "disabled";
 	};
+};
+
+&i2c3 {
+        ov5640_mipi: ov5640_mipi@4c {
+                ipu_id = <1>;
+                csi_id = <1>;
+        };
+};
+
+&mipi_csi {
+        ipu_id = <1>;
+        csi_id = <1>;
 };
 
 &iomuxc {
