--- a/drivers/mfd/Kconfig
+++ b/drivers/mfd/Kconfig
@@ -395,6 +395,18 @@ config MFD_MXS_LRADC
 	  This driver can also be built as a module. If so, the module will be
 	  called mxs-lradc.
 
+config MFD_MCA_CC6UL
+	bool "Digi Micro Controller Assist for ConnectCore 6UL"
+	select MFD_CORE
+	select REGMAP_I2C
+	select REGMAP_IRQ
+	depends on I2C=y
+	help
+	  Select this option to enable support for MCA on the ConnectCore 6UL.
+	  This includes the I2C driver and core APIs.
+	  Additional drivers must be enabled in order to use the functionality
+	  of the device (RTC, watchdog, ...).
+
 config MFD_MX25_TSADC
 	tristate "Freescale i.MX25 integrated Touchscreen and ADC unit"
 	select REGMAP_MMIO
