--- a/drivers/mfd/Makefile
+++ b/drivers/mfd/Makefile
@@ -228,3 +228,6 @@ obj-$(CONFIG_MFD_MXS_LRADC)     += mxs-lradc.o
 obj-$(CONFIG_MFD_SC27XX_PMIC)	+= sprd-sc27xx-spi.o
 obj-$(CONFIG_RAVE_SP_CORE)	+= rave-sp.o
 
+mca-cc6ul-objs			:= mca-cc6ul-core.o mca-cc6ul-irq.o mca-cc6ul-i2c.o
+obj-$(CONFIG_MFD_MCA_CC6UL)	+= mca-cc6ul.o
+
