imx6ul: Add MCA GPIO support for the ConnectCore 6UL SOM
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/arch/arm/boot/dts/imx6ul-ccimx6ulsom.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulsom.dtsi
@@ -53,6 +53,17 @@
 		fw-update-gpio = <&gpio4 14 GPIO_ACTIVE_LOW>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_mca_cc6ul>;
+
+		mca_gpio: gpio {
+			compatible = "digi,mca-cc6ul-gpio";
+			gpio-controller;
+			#gpio-cells = <2>;
+
+			interrupt-parent = <&mca_cc6ul>;
+			interrupt-controller;
+			#interrupt-cells = <2>;
+		};
+
 	};
 
 	pfuze3000: pmic@8 {
