imx6ul: Add MCA watchdog support for the ConnectCore 6UL SOM
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/arch/arm/boot/dts/imx6ul-ccimx6ulsom.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulsom.dtsi
@@ -64,6 +64,11 @@
 			#interrupt-cells = <2>;
 		};
 
+		watchdog {
+			compatible = "digi,mca-cc6ul-wdt";
+			digi,full-reset;
+		};
+
 	};
 
 	pfuze3000: pmic@8 {
