--- a/drivers/watchdog/Kconfig
+++ b/drivers/watchdog/Kconfig
@@ -161,6 +161,14 @@ config MENF21BMC_WATCHDOG
 	  This driver can also be built as a module. If so the module
 	  will be called menf21bmc_wdt.
 
+config MCA_CC6UL_WATCHDOG
+	tristate "Digi ConnectCore 6UL Micro Controller Assist Watchdog"
+	select WATCHDOG_CORE
+	select MFD_MCA_CC6UL
+	help
+	  If you say yes here you will get support for the watchdog in the
+	  Micro Controller Assist of Digi ConnectCore 6UL system-on-module.
+
 config TANGOX_WATCHDOG
 	tristate "Sigma Designs SMP86xx/SMP87xx watchdog"
 	select WATCHDOG_CORE
