imx6ul: Add MCA ADC support for ConnectCore 6UL SOM and SBCs
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/arch/arm/boot/dts/imx6ul-ccimx6ulsom.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulsom.dtsi
@@ -69,6 +69,11 @@
 			digi,full-reset;
 		};
 
+		mca_adc: adc {
+			compatible = "digi,mca-cc6ul-adc";
+			digi,adc-vref = <3000000>;
+		};
+
 	};
 
 	pfuze3000: pmic@8 {
