--- a/arch/arm/configs/imx_v6_v7_defconfig
+++ b/arch/arm/configs/imx_v6_v7_defconfig
@@ -380,6 +380,7 @@ CONFIG_VIDEO_IMX_MEDIA=y
 CONFIG_COMMON_CLK_PWM=y
 CONFIG_IIO=y
 CONFIG_IMX7D_ADC=y
+CONFIG_MCA_CC6UL_ADC=y
 CONFIG_VF610_ADC=y
 CONFIG_MAG3110=y
 CONFIG_IIO_SYSFS_TRIGGER=y
