--- a/arch/arm/boot/dts/imx6ul-ccimx6ulsbcpro.dts
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulsbcpro.dts
@@ -158,6 +158,17 @@
 	regulator-max-microvolt = <1800000>;
 };
 
+/*
+ * Enable MCA ADC channels on GPIO connector:
+ *  - MCA_IO1 (channel 1)
+ *  - MCA_IO3 (channel 3)
+ * Edit adc-ch-list to include the ADC channels that you want to enable.
+ */
+&mca_adc {
+	digi,adc-ch-list = <1 3>;
+	digi,adc-vref = <3000000>;
+};
+
 &pwm1 {
 	status = "okay";
 };
