--- a/drivers/iio/adc/Kconfig
+++ b/drivers/iio/adc/Kconfig
@@ -469,6 +469,16 @@ config MAX1363
 	  To compile this driver as a module, choose M here: the module will be
 	  called max1363.
 
+config MCA_CC6UL_ADC
+	tristate "Digi ConnectCore 6UL Micro Controller Assist ADC"
+	select MFD_MCA_CC6UL
+	help
+	  If you say Y here you will get support for the ADCs in the Micro
+	  Controller Assist of Digi ConnectCore 6UL system-on-module.
+
+	  This driver can also be built as a module, if so, the module
+	  will be called "mca-cc6ul-adc".
+
 config	MAX9611
 	tristate "Maxim max9611/max9612 ADC driver"
 	depends on I2C
