imx6ul: Add MCA tamper support for ConnectCore 6UL SOM and SBCs
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/arch/arm/boot/dts/imx6ul-ccimx6ulsbcpro.dts
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulsbcpro.dts
@@ -169,6 +169,13 @@
 	digi,adc-vref = <3000000>;
 };
 
+/* Enable Tamper detection. There are 2 digital (0 and 1) and 2
+ * analog (2 and 3) tamper interfaces.
+ */
+&mca_tamper {
+	digi,tamper-if-list = <0 1 2 3>;
+};
+
 &pwm1 {
 	status = "okay";
 };
