--- a/arch/arm/configs/imx_v6_v7_defconfig
+++ b/arch/arm/configs/imx_v6_v7_defconfig
@@ -385,6 +385,7 @@ CONFIG_VF610_ADC=y
 CONFIG_MAG3110=y
 CONFIG_IIO_SYSFS_TRIGGER=y
 CONFIG_MPL3115=y
+CONFIG_TAMPER_MCA_CC6UL=y
 CONFIG_PWM=y
 CONFIG_PWM_FSL_FTM=y
 CONFIG_PWM_IMX=y
