imx6ul: Add MCA UART support for ConnectCore 6UL SOM and SBCs
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/arch/arm/boot/dts/imx6ul-ccimx6ulsbcpro.dts
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulsbcpro.dts
@@ -176,6 +176,19 @@
 	digi,tamper-if-list = <0 1 2 3>;
 };
 
+/*
+ * Enable MCA UART:
+ *  - MCA_IO1 (TX)
+ *  - MCA_IO2 (RX)
+ */
+&mca_uart {
+	status = "okay";
+
+	/* Edit to nable CTS and/or RTS in any MCA GPIO-capable line */
+	rts-pin = <3>;
+	cts-pin = <5>;
+};
+
 &pwm1 {
 	status = "okay";
 };
@@ -452,3 +465,4 @@
 		>;
 	};
 };
+
