imx6ul: Add RTC MCA support for ConnectCore 6UL SOM
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/arch/arm/boot/dts/imx6ul-ccimx6ulsom.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulsom.dtsi
@@ -64,6 +64,10 @@
 			#interrupt-cells = <2>;
 		};
 
+		rtc {
+			compatible = "digi,mca-cc6ul-rtc";
+		};
+
 		watchdog {
 			compatible = "digi,mca-cc6ul-wdt";
 			digi,full-reset;
