--- a/arch/arm/boot/dts/imx6ul-ccimx6ulsom.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulsom.dtsi
@@ -73,6 +73,15 @@
 			digi,full-reset;
 		};
 
+		pwrkey {
+			compatible = "digi,mca-cc6ul-pwrkey";
+			digi,key-power;
+			digi,key-sleep;
+			digi,debounce-ms = <100>;
+			digi,pwroff-delay-sec = <6>;
+			digi,pwroff-guard-sec = <30>;
+		};
+
 		mca_adc: adc {
 			compatible = "digi,mca-cc6ul-adc";
 			digi,adc-vref = <3000000>;
