--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -851,4 +851,15 @@ config INPUT_SC27XX_VIBRA
 	  To compile this driver as a module, choose M here. The module will
 	  be called sc27xx_vibra.
 
+config INPUT_MCA_CC6UL_PWRKEY
+	tristate "Digi ConnectCore 6UL Micro Controller Assist Power key"
+	select MFD_MCA_CC6UL
+	help
+	  If you say Y here you will get support for the Power Key in the
+	  Micro Controller Assist of Digi ConnectCore 6UL system-on-module,
+	  as an input device, reporting the power input/button status.
+
+	  This driver can also be built as a module, if so, the module
+	  will be called "pwrkey-mca-cc6ul".
+
 endif
