--- a/drivers/mfd/Kconfig
+++ b/drivers/mfd/Kconfig
@@ -407,6 +407,16 @@ config MFD_MCA_CC6UL
 	  Additional drivers must be enabled in order to use the functionality
 	  of the device (RTC, watchdog, ...).
 
+config MFD_MCA_IOEXP
+	bool "Digi IO Expander"
+	select MFD_CORE
+	select REGMAP_I2C
+	select REGMAP_IRQ
+	depends on I2C=y
+	help
+	  Select this option to enable support for the Digi IO Expander.
+	  This includes the GPIO and ADC drivers.
+
 config MFD_MX25_TSADC
 	tristate "Freescale i.MX25 integrated Touchscreen and ADC unit"
 	select REGMAP_MMIO
