ccimx6ulsbcpro: Add IOEXP GPIO support
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/drivers/gpio/Makefile
+++ b/drivers/gpio/Makefile
@@ -83,6 +83,7 @@ obj-$(CONFIG_GPIO_MERRIFIELD)	+= gpio-merrifield.o
 obj-$(CONFIG_GPIO_MC33880)	+= gpio-mc33880.o
 obj-$(CONFIG_GPIO_MC9S08DZ60)	+= gpio-mc9s08dz60.o
 obj-$(CONFIG_GPIO_MCA_CC6UL)	+= gpio-mca-cc6ul.o gpio-mca-common.o
+obj-$(CONFIG_MFD_MCA_IOEXP)	+= gpio-mca-ioexp.o gpio-mca-common.o
 obj-$(CONFIG_GPIO_ML_IOH)	+= gpio-ml-ioh.o
 obj-$(CONFIG_GPIO_MM_LANTIQ)	+= gpio-mm-lantiq.o
 obj-$(CONFIG_GPIO_MOCKUP)      += gpio-mockup.o
