--- a/arch/arm/boot/dts/imx6ul-ccimx6ulsbcpro.dts
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulsbcpro.dts
@@ -118,6 +118,29 @@
 		irq-gpios = <&gpio5 2 GPIO_ACTIVE_HIGH>;
 		status = "okay";
 	};
+
+	mca_ioexp: mca_io@6e {
+		compatible = "digi,mca_ioexp";
+		reg = <0x6e>;
+		interrupt-parent = <&mca_gpio>;
+		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
+		restore-config-on-resume;
+		status = "okay";
+
+		interrupt-controller;
+		#interrupt-cells = <2>;
+		pinctrl-names = "default";
+
+		mca_ioexp_gpio: gpio {
+			compatible = "digi,mca-ioexp-gpio";
+			gpio-controller;
+			#gpio-cells = <2>;
+
+			interrupt-parent = <&mca_ioexp>;
+			interrupt-controller;
+			#interrupt-cells = <2>;
+		};
+	};
 };
 
 &lcdif {
