ccimx6ulsbcpro: Add IOEXP ADC support
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/arch/arm/boot/dts/imx6ul-ccimx6ulsbcpro.dts
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulsbcpro.dts
@@ -140,6 +140,11 @@
 			interrupt-controller;
 			#interrupt-cells = <2>;
 		};
+
+		mca_ioexp_adc: adc {
+			compatible = "digi,mca-ioexp-adc";
+			digi,adc-vref = <3300000>;
+		};
 	};
 };
 
@@ -488,4 +493,3 @@
 		>;
 	};
 };
-
