--- a/arch/arm/boot/dts/imx6ul-ccimx6ulsom.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulsom.dtsi
@@ -283,6 +283,15 @@
 			MX6UL_PAD_SNVS_TAMPER9__GPIO5_IO09      0x3000
 			 >;
 	};
+
+	pinctrl_mca_cc6ul: mcagrp {
+		fsl,pins = <
+			/* MCA_nINT */
+			MX6UL_PAD_SNVS_TAMPER4__GPIO5_IO04	0xb0b1
+			/* MCA_FW_UPDATE */
+			MX6UL_PAD_NAND_CE1_B__GPIO4_IO14	0x30
+			>;
+		};
 };
 
 &reg_arm {
