--- a/arch/arm64/configs/ccimx8x_defconfig
+++ b/arch/arm64/configs/ccimx8x_defconfig
@@ -458,6 +458,7 @@ CONFIG_IMX8QXP_ADC=y
 CONFIG_MCA_CC8X_ADC=y
 CONFIG_PWM=y
 CONFIG_PWM_IMX=y
+CONFIG_PWM_MCA=y
 CONFIG_RESET_CONTROLLER=y
 CONFIG_PHY_SAMSUNG_USB2=y
 CONFIG_PHY_XGENE=y
