ARM: configs: imx_v6_v7_defconfig: Configure for QCA6564 driver support
* Remove prove locking support as the QCA6564 driver is not that well
  designed.

* There is no way for an out-of-tree kernel module to select the WEXT
  that the QCA6564 driver needs. Including HOSTAP as a module will do
  this for us, even if we don't include the module on our targets anyway.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/arch/arm/configs/imx_v6_v7_defconfig
+++ b/arch/arm/configs/imx_v6_v7_defconfig
@@ -153,6 +153,7 @@ CONFIG_USB_RTL8152=m
 CONFIG_USB_USBNET=y
 CONFIG_USB_NET_CDC_EEM=m
 CONFIG_BRCMFMAC=m
+CONFIG_HOSTAP=m
 CONFIG_MWIFIEX=m
 CONFIG_MWIFIEX_SDIO=m
 CONFIG_MWIFIEX_PCIE=m
@@ -422,7 +423,6 @@ CONFIG_PRINTK_TIME=y
 CONFIG_DEBUG_FS=y
 CONFIG_MAGIC_SYSRQ=y
 # CONFIG_SCHED_DEBUG is not set
-CONFIG_PROVE_LOCKING=y
 # CONFIG_DEBUG_BUGVERBOSE is not set
 # CONFIG_FTRACE is not set
 # CONFIG_ARM_UNWIND is not set
