lpi2c: imx8: add DT property to force i2c hold time
Adding i2c-hold-time-ns property in device tree will increase the prescaler
as necessary to meet desired start, repeated start and stop i2c hold time.
Be aware that a high prescaler value can lead to low clkhi/clklo values; so
some checks have been added to respect minimums established by the manufacturer

https://jira.digi.com/browse/DEL-6220

Signed-off-by: Hector Bujanda <hector.bujanda@digi.com>

--- a/arch/arm64/boot/dts/digi/ccimx8x.dtsi
+++ b/arch/arm64/boot/dts/digi/ccimx8x.dtsi
@@ -45,6 +45,7 @@
 	clock-names = "per", "ipg";
 	clock-frequency = <100000>;
 	pinctrl-names = "default";
+	digi,hold-time-ns = <3500>;
 	pinctrl-0 = <&pinctrl_lpi2c0>;
 	status = "okay";
 
