arm64: dts: ccimx8x-sbc-pro: use vcc regulator to PCIe mini card socket
Instead of reusing the regulator epdev_on to power on the PCIE_VCC_EN line,
define the vcc regulator to manage both power domains separately.

https://jira.digi.com/browse/DEL-6213

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro.dtsi
+++ b/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro.dtsi
@@ -76,7 +76,7 @@
 			reg = <4>;
 			pinctrl-names = "default";
 			pinctrl-0 = <&pinctrl_reg_3v3_pcie>;
-			regulator-name = "epdev_on";
+			regulator-name = "vcc";
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
 			gpio = <&gpio0 31 GPIO_ACTIVE_HIGH>; /* PCIE_VCC_EN */
@@ -524,6 +524,11 @@
 
 &pd_dma_lpuart2 {
 	debug_console;
+};
+
+/* PCIE (Mini Card) */
+&pcieb {
+	vcc-supply = <&reg_3v3_pcie>;
 };
 
 &prg1 {
