--- a/arch/arm64/boot/dts/digi/ccimx8x.dtsi
+++ b/arch/arm64/boot/dts/digi/ccimx8x.dtsi
@@ -43,9 +43,9 @@
 	clocks = <&clk IMX8QXP_I2C0_CLK>,
 		 <&clk IMX8QXP_I2C0_IPG_CLK>;
 	clock-names = "per", "ipg";
-	clock-frequency = <100000>;
+	clock-frequency = <1000000>;
 	pinctrl-names = "default";
-	digi,hold-time-ns = <3500>;
+	digi,hold-time-ns = <8000>;
 	pinctrl-0 = <&pinctrl_lpi2c0>;
 	status = "okay";
 
