--- a/arch/arm/configs/ccimx6ul_defconfig
+++ b/arch/arm/configs/ccimx6ul_defconfig
@@ -80,7 +80,7 @@ CONFIG_BT_BNEP_MC_FILTER=y
 CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=y
 CONFIG_BT_HCIUART=y
-CONFIG_BT_HCIUART_ATH3K=y
+CONFIG_BT_HCIUART_H4=y
 CONFIG_CFG80211=y
 CONFIG_CFG80211_CERTIFICATION_ONUS=y
 CONFIG_CFG80211_DEBUGFS=y
@@ -181,7 +181,6 @@ CONFIG_I2C_CHARDEV=y
 # CONFIG_I2C_HELPER_AUTO is not set
 CONFIG_I2C_ALGOBIT=y
 CONFIG_I2C_IMX=y
-CONFIG_I2C_IMX_LPI2C=y
 CONFIG_SPI=y
 CONFIG_SPI_GPIO=y
 CONFIG_SPI_IMX=y
