ARM64: dts: ccimx8x: create aliases for i2c devices
Create aliases for device i2c0 to i2c3 so they have a fix index in the sys
filesystem. If not, indexes are established randomly (based on device tree
enabled i2c devices) and don't match the ones reported in the documentation
or the one mca_tool is expecting.

https://jira.digi.com/browse/DEL-6245

Signed-off-by: Hector Bujanda <hector.bujanda@digi.com>

--- a/arch/arm64/boot/dts/digi/ccimx8x.dtsi
+++ b/arch/arm64/boot/dts/digi/ccimx8x.dtsi
@@ -13,14 +13,22 @@
  * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* Limit cma-reserved to 320 MiB to avoid slowdowns on 1 GiB RAM variants */
 / {
+	aliases {
+		i2c0 = &i2c0;
+		i2c1 = &i2c1;
+		i2c2 = &i2c2;
+		i2c3 = &i2c3;
+	};
+
+	/* Limit cma-reserved to 320 MiB to avoid slowdowns on 1 GiB RAM variants */
 	reserved-memory {
 		linux,cma {
 			size = <0 0x14000000>;
 			alloc-ranges = <0 0x96000000 0 0x14000000>;
 		};
 	};
+
 	regulators {
 		compatible = "simple-bus";
 		#address-cells = <1>;
