ARM64: dts: ccimx8x: increase mca i2c input clock to 48 MHz
By increasing the i2c input clock we can correctly achieve a final 1mbps i2c
output clock even with an extended hold time (high i2c prescaler)

https://jira.digi.com/browse/DEL-6220

Signed-off-by: Hector Bujanda <hector.bujanda@digi.com>

--- a/arch/arm64/boot/dts/digi/ccimx8x.dtsi
+++ b/arch/arm64/boot/dts/digi/ccimx8x.dtsi
@@ -51,6 +51,7 @@
 	clocks = <&clk IMX8QXP_I2C0_CLK>,
 		 <&clk IMX8QXP_I2C0_IPG_CLK>;
 	clock-names = "per", "ipg";
+	assigned-clock-rates = <48000000>;
 	clock-frequency = <1000000>;
 	pinctrl-names = "default";
 	digi,hold-time-ns = <8000>;
