--- a/arch/arm64/configs/ccimx8x_defconfig
+++ b/arch/arm64/configs/ccimx8x_defconfig
@@ -272,6 +272,7 @@ CONFIG_DEVICE_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_WATCHDOG_NOWAYOUT=y
 CONFIG_MCA_WATCHDOG=y
+CONFIG_TAMPER_MCA=y
 CONFIG_IMX2_WDT=y
 CONFIG_IMX8_WDT=y
 CONFIG_MFD_CROS_EC=y
