--- a/arch/arm64/boot/dts/digi/ccimx8x-sbc-express.dts
+++ b/arch/arm64/boot/dts/digi/ccimx8x-sbc-express.dts
@@ -206,6 +206,14 @@
 //	digi,adc-vref = <3000000>;
 // };
 
+/*
+ * Uncomment to Enable Tamper detection. There are 2 digital (0 and 1) and 2
+ * analog (2 and 3) tamper interfaces.
+ */
+//&mca_tamper {
+//	digi,tamper-if-list = <0 1 2 3>;
+//};
+
 /* USB_OTG1 */
 &usbotg1 {
 	/*
