ARM64: dts: ccimx8x: remove 'mca_' prefix from MCA nodes
Leave the 'mca_' prefix for node labels.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/arch/arm64/boot/dts/digi/ccimx8x.dtsi
+++ b/arch/arm64/boot/dts/digi/ccimx8x.dtsi
@@ -93,11 +93,11 @@
 			digi,pwroff-guard-sec = <30>;
 		};
 
-		mca_rtc {
+		rtc {
 			compatible = "digi,mca-cc8x-rtc";
 		};
 
-		mca_wdt {
+		wdt {
 			compatible = "digi,mca-cc8x-wdt";
 			digi,full-reset;
 		};
