--- a/arch/arm64/configs/ccimx8_android_defconfig
+++ b/arch/arm64/configs/ccimx8_android_defconfig
@@ -323,6 +323,7 @@ CONFIG_SCSI_HISI_SAS_PCI=y
 CONFIG_SCSI_MPT3SAS=m
 CONFIG_SCSI_UFSHCD=y
 CONFIG_SCSI_UFSHCD_PLATFORM=y
+CONFIG_SCSI_UFS_CRYPTO=y
 CONFIG_ATA=y
 CONFIG_SATA_AHCI=y
 CONFIG_SATA_AHCI_PLATFORM=y
@@ -393,6 +394,7 @@ CONFIG_MICROSEMI_PHY=y
 CONFIG_NXP_TJA11XX_PHY=y
 CONFIG_REALTEK_PHY=y
 CONFIG_ROCKCHIP_PHY=y
+CONFIG_SMSC_PHY=y
 CONFIG_VITESSE_PHY=y
 CONFIG_PPP=y
 CONFIG_PPP_BSDCOMP=y
@@ -507,6 +509,7 @@ CONFIG_TRUSTY=y
 CONFIG_WATCHDOG=y
 CONFIG_WATCHDOG_NOWAYOUT=y
 CONFIG_MCA_WATCHDOG=y
+CONFIG_MCA_GPIO_WATCHDOG=y
 CONFIG_IMX2_WDT=y
 CONFIG_IMX_SC_WDT=y
 CONFIG_MFD_IMX_AUDIOMIX=y
@@ -717,6 +720,7 @@ CONFIG_TYPEC_TCPCI=y
 CONFIG_TYPEC_SWITCH_GPIO=y
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
+CONFIG_MMC_CRYPTO=y
 CONFIG_MMC_ARMMMCI=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_ACPI=y
